fix: extract common style to css
- Former book.html, each content had overlapped common style.
- Extract common style to css, can use it to another view.

--- a/src/main/resources/static/left-tab.css
+++ b/src/main/resources/static/left-tab.css
@@ -57,3 +57,47 @@ header {
     border: 1px solid black;
     padding: 8px;
 }
+
+.specific_view {
+    display: inline-block;
+    margin-left: 50px;
+    text-align: center;
+    width: 600px;
+}
+
+.specific_view_frame {
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+    width: 600px;
+    height: 50px;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+    border-top: 1px solid #000;
+}
+
+.specific_view_left_tag {
+    width: 90px;
+}
+
+.specific_view_right_div {
+    flex-grow: 1;
+    border-left: 1px solid #000;
+    padding-left: 15px;
+    height: 100%;
+}
+
+.specific_view_right_input {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.button {
+    flex-grow: 1;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
